--- a/1.html
+++ b/1.html
@@ -26,6 +26,6 @@ Hypertext Markup Language (html)
 <br>패트와 매트에서 매트를 닮았다고 매트라 불립니다.
 <br>그러면 매트사진을 불러볼까요
 </p><img src="패트와 매트.JFIF"width="50%"><p>
-매트가 심하게 고민을 하는 것 같습니다</p>
+매트가 심하게 고민을 하는 것 같습니다ㅋㅋㅋ</p>
 </body>
 </html>
